--- a/spellsource-server-deployment/src/main/helm/spellsource/values.yaml
+++ b/spellsource-server-deployment/src/main/helm/spellsource/values.yaml
@@ -107,7 +107,8 @@ logback: |
   <configuration
           xmlns="http://ch.qos.logback/xml/ns/logback"
           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-          xsi:schemaLocation="http://ch.qos.logback/xml/ns/logback https://raw.githubusercontent.com/enricopulatzo/logback-XSD/master/src/main/xsd/logback.xsd">
+          xsi:schemaLocation="http://ch.qos.logback/xml/ns/logback https://raw.githubusercontent.com/enricopulatzo/logback-XSD/master/src/main/xsd/logback.xsd"
+          scan="true" scanPeriod="10 seconds">
     <import class="ch.qos.logback.classic.encoder.PatternLayoutEncoder"/>
     <import class="ch.qos.logback.core.ConsoleAppender"/>
 
@@ -120,5 +121,12 @@ logback: |
     <root level="WARN">
       <appender-ref ref="STDOUT"/>
     </root>
-    <logger name="io.jaegertracing" level="OFF" />
+    <logger name="com.hiddenswitch.framework" level="DEBUG"/>
+    <logger name="com.hiddenswitch.framework.impl.ClientMatchmakingService" level="DEBUG"/>
+    <logger name="com.hiddenswitch.framework.Matchmaking" level="TRACE"/>
+    <logger name="com.hiddenswitch.diagnostics" level="ALL"/>
+    <logger name="net.demilich.metastone.game" level="WARN"/>
+    <logger name="io.grpc.netty" level="WARN"/>
+    <logger name="io.netty" level="WARN"/>
+    <logger name="io.jaegertracing" level="OFF"/>
   </configuration>
