make cluster manager configurable

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -19,3 +19,4 @@ jobs:
           AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          PLAYSPELLSOURCE_CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.PLAYSPELLSOURCE_CLOUDFRONT_DISTRIBUTION_ID }}
