--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "gatsby": "gatsby"
+    "gatsby": "gatsby",
+    "postinstall": "patch-package"
   },
   "author": "Benjamin Berman",
   "license": "AGPL-3.0-or-later",
@@ -36,6 +37,7 @@
     "lodash": "^4.17.15",
     "marked": "^2.0.3",
     "node-fs-extra": "^0.8.2",
+    "patch-package": "^6.5.1",
     "pify": "^5.0.0",
     "pixelmatch": "^5.2.1",
     "psd.js": "^3.3.15",
@@ -56,13 +58,19 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.3",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "babel-jest": "^26.0.0",
     "babel-preset-gatsby": "^1.4.0",
     "flow-bin": "^0.150.1",
     "gatsby-cli": "^3.4.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.0",
+    "prettier": "^2.8.4",
     "react-test-renderer": "^17.0.2",
-    "standard": "^16.0.3"
+    "standard": "^16.0.3",
+    "typescript": "^4.3.2"
   }
 }
