--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -58,7 +58,10 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@tomysmith/deep-partial": "^1.0.1",
+    "@types/jest": "^26.0.0",
     "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -71,6 +74,7 @@
     "prettier": "^2.8.4",
     "react-test-renderer": "^17.0.2",
     "standard": "^16.0.3",
+    "typed-scss-modules": "^7.1.0",
     "typescript": "^4.3.2"
   }
 }
