Connect postgraphile / apollo

--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -7,20 +7,27 @@
     "test": "jest",
     "postinstall": "patch-package",
     "develop": "next dev",
-    "dev": "next dev"
+    "dev": "next dev",
+    "codegen": "graphql-codegen"
   },
   "author": "Benjamin Berman",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
+    "@apollo/client": "^3.7.10",
+    "@apollo/server": "^4.5.0",
+    "@as-integrations/next": "^1.2.0",
+    "@graphql-tools/stitch": "^8.7.43",
     "@react-icons/all-files": "^4.1.0",
     "@react-spring/parallax": "^9.1.2",
+    "@types/react-loadable": "^5.5.6",
     "acorn": "^8.2.4",
     "aseprite": "^0.3.0",
     "blockly": "^3.20200924.2",
-    "canvas": "^2.11.0",
     "elasticlunr": "^0.9.5",
     "enumify": "^2.0.0",
     "glob-promise": "^6.0.2",
+    "graphql": "15.8.0",
+    "graphql-tools": "^8.3.19",
     "gray-matter": "^4.0.3",
     "kaitai-struct": "^0.9.0",
     "lodash": "^4.17.15",
@@ -30,6 +37,7 @@
     "patch-package": "^6.5.1",
     "pify": "^5.0.0",
     "pixelmatch": "^5.2.1",
+    "postgraphile": "^4.13.0",
     "probe-image-size": "^7.2.3",
     "psd.js": "^3.3.15",
     "react": "^18.2.0",
@@ -51,6 +59,11 @@
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/typescript": "^3.0.2",
+    "@graphql-codegen/typescript-operations": "^3.0.2",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@graphql-codegen/typescript-resolvers": "^3.1.1",
     "@tomysmith/deep-partial": "^1.0.1",
     "@types/elasticlunr": "^0.9.5",
     "@types/jest": "^26.0.0",
@@ -67,7 +80,6 @@
     "prettier": "^2.8.4",
     "react-test-renderer": "^17.0.2",
     "standard": "^16.0.3",
-    "type-fest": "^3.6.1",
     "typed-scss-modules": "^7.1.0",
     "typescript": "^4.3.2"
   }
