--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -8,7 +8,8 @@
     "postinstall": "patch-package",
     "develop": "next dev",
     "dev": "next dev",
-    "codegen": "graphql-codegen"
+    "codegen": "graphql-codegen",
+    "scss": "typed-scss-modules src"
   },
   "author": "Benjamin Berman",
   "license": "AGPL-3.0-or-later",
@@ -33,11 +34,13 @@
     "lodash": "^4.17.15",
     "marked": "^2.0.3",
     "next": "^13.2.4",
+    "next-auth": "^4.20.1",
     "node-fs-extra": "^0.8.2",
     "patch-package": "^6.5.1",
     "pify": "^5.0.0",
     "pixelmatch": "^5.2.1",
     "postgraphile": "^4.13.0",
+    "postgraphile-plugin-connection-filter": "^2.3.0",
     "probe-image-size": "^7.2.3",
     "psd.js": "^3.3.15",
     "react": "^18.2.0",
@@ -47,6 +50,7 @@
     "react-loadable": "^5.5.0",
     "react-reconciler": "^0.26.2",
     "react-spring": "^9.1.2",
+    "react-use": "^17.4.0",
     "recursive-omit-by": "^2.0.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
@@ -82,5 +86,8 @@
     "standard": "^16.0.3",
     "typed-scss-modules": "^7.1.0",
     "typescript": "^4.3.2"
+  },
+  "resolutions": {
+    "graphql": "15.8.0"
   }
 }
