Starting collection/decks pages + UI improvements

--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -8,6 +8,8 @@
     "postinstall": "patch-package",
     "develop": "next dev",
     "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "codegen": "graphql-codegen",
     "scss": "typed-scss-modules src"
   },
@@ -24,6 +26,7 @@
     "acorn": "^8.2.4",
     "aseprite": "^0.3.0",
     "blockly": "^3.20200924.2",
+    "bootstrap": "^5.2.3",
     "elasticlunr": "^0.9.5",
     "enumify": "^2.0.0",
     "glob-promise": "^6.0.2",
@@ -55,6 +58,7 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
     "sass": "^1.33",
+    "sharp": "^0.32.0",
     "stream-read-all": "^3.0.1",
     "string-format": "^2.0.0",
     "webpack": "^5.76.2",
