Saving and loading cards from db; blockly update

--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -25,7 +25,7 @@
     "@types/react-loadable": "^5.5.6",
     "acorn": "^8.2.4",
     "aseprite": "^0.3.0",
-    "blockly": "^3.20200924.2",
+    "blockly": "7.20211209.4",
     "bootstrap": "^5.2.3",
     "elasticlunr": "^0.9.5",
     "enumify": "^2.0.0",
@@ -44,6 +44,7 @@
     "pixelmatch": "^5.2.1",
     "postgraphile": "^4.13.0",
     "postgraphile-plugin-connection-filter": "^2.3.0",
+    "postgraphile-upsert-plugin": "^3.2.2",
     "probe-image-size": "^7.2.3",
     "psd.js": "^3.3.15",
     "react": "^18.2.0",
