--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 org.gradle.parallel=true
 org.gradle.vfs.watch=true
 org.gradle.caching=true
+org.gradle.java.installations.paths=C:/Program Files/OpenJDK/jdk-20.0.0,C:/Program Files/OpenJDK/jdk-20.0.1,C:/Java/graalvm-ce-java17-22.1.0,C:/Java/graalvm-ce-java19-22.3.1
 classgraphVersion=4.8.152
 jacksonVersion=2.14.1
 jacksonDatabindVersion=2.14.1
 jaegerVersion=1.8.1
-vertxVersion=4.3.7
+vertxVersion=4.4.2
 junitVersion=5.9.1
 shadowPluginVersion=7.1.2
 guavaVersion=31.1-jre
@@ -16,8 +17,9 @@ testcontainersVersion=1.17.6
 postgresqlVersion=42.5.1
 nettyVersion=4.1.85.Final
 grpcVersion=1.50.2
-protocVersion=3.21.12
+protocVersion=3.23.1
 resteasyVersion=4.7.7.Final
 log4jVersion=2.19.0
 slf4jVersion=2.0.4
 logbackVersion=1.4.4
+flywayVersion=9.3.0
