--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -9,6 +9,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
+          java-version: '20'
+          distribution: temurin
+      - uses: actions/setup-java@v3
+        with:
           java-version: '19'
           distribution: temurin
       - uses: gradle/wrapper-validation-action@v1
