--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id("org.gradle.toolchains.foojay-resolver") version "0.5.0"
+}
+
 buildCache {
     local {
         directory = new File(rootDir, '.gradle/build-cache')
@@ -5,7 +9,15 @@ buildCache {
     }
 }
 
-rootProject.name = 'spellsource'
+toolchainManagement {
+    jvm {
+        javaRepositories {
+            repository("foojay") {
+                resolverClass = org.gradle.toolchains.foojay.FoojayToolchainResolver
+            }
+        }
+    }
+}
 
 include 'spellsource-game'
 include 'spellsource-protos'
@@ -13,7 +25,6 @@ include 'spellsource-cards-git'
 include 'spellsource-testutils'
 include 'spellsource-common'
 include 'spellsource-cards-private'
-include 'spellsource-discord'
 include 'spellsource-containers'
 include 'spellsource-web'
 include 'python'
