--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -51,6 +51,8 @@
     "react": "^18.2.0",
     "react-ace": "^9.4.0",
     "react-bootstrap": "^1.5.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-loadable": "^5.5.0",
     "react-reconciler": "^0.26.2",
