Fix premade decks, improve collection mobile view

--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -28,6 +28,7 @@
     "aseprite": "^0.3.0",
     "blockly": "7.20211209.4",
     "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
     "elasticlunr": "^0.9.5",
     "enumify": "^2.0.0",
     "glob-promise": "^6.0.2",
@@ -50,9 +51,10 @@
     "psd.js": "^3.3.15",
     "react": "^18.2.0",
     "react-ace": "^9.4.0",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^2.7.4",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-loadable": "^5.5.0",
     "react-reconciler": "^0.26.2",
