--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -52,6 +52,7 @@
     "react": "^18.2.0",
     "react-ace": "^9.4.0",
     "react-bootstrap": "^2.7.4",
+    "react-div-100vh": "^0.7.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
