working sql catalogue

--- a/spellsource-server/build.gradle
+++ b/spellsource-server/build.gradle
@@ -361,6 +361,7 @@ test {
     group('spellsource')
     useJUnitPlatform()
     enableAssertions = false
+    maxHeapSize = '4096m'
     testLogging {
         showExceptions true
         exceptionFormat "full"
