--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -26,7 +26,7 @@
     "@types/react-loadable": "^5.5.6",
     "acorn": "^8.2.4",
     "aseprite": "^0.3.0",
-    "blockly": "7.20211209.4",
+    "blockly": "10.0.0",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
@@ -89,20 +89,21 @@
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
     "@tomysmith/deep-partial": "^1.0.1",
     "@types/elasticlunr": "^0.9.5",
+    "@types/java": "^0.9.2",
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.3",
     "@types/probe-image-size": "^7.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "babel-jest": "^26.0.0",
-    "babel-preset-gatsby": "^1.4.0",
     "flow-bin": "^0.150.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.0",
+    "java": "^0.13.0",
+    "jest": "^29.1.0",
     "prettier": "^2.8.4",
     "react-test-renderer": "^17.0.2",
     "standard": "^16.0.3",
+    "ts-jest": "^29.1.0",
     "typed-scss-modules": "^7.1.0",
     "typescript": "^4.3.2"
   },
