run migrations sql for ddl, clean up jooq code, needs command fix

--- a/spellsource-server/build.gradle
+++ b/spellsource-server/build.gradle
@@ -337,6 +337,7 @@ tasks.register('jooqGenerate') {
 }
 
 tasks.register('migrationsOrSqlChanged') {
+    group('spellsource')
     description("Run whenever the schema as encoded in $project.projectDir.name/src/main/resources/db/migration has changed - recreates the JOOQ DSL and dumps a ddl.sql file for autocompletion")
     dependsOn += [jooqGenerate]
 }
