--- a/spellsource-web-cardeditor-support/build.gradle
+++ b/spellsource-web-cardeditor-support/build.gradle
@@ -11,3 +11,7 @@ dependencies {
     api project(':spellsource-cards-git')
     api project(':spellsource-testutils')
 }
+
+shadowJar {
+    archiveVersion.set("")
+}
