--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -100,6 +100,7 @@
     "identity-obj-proxy": "^3.0.0",
     "java": "^0.13.0",
     "jest": "^29.1.0",
+    "jest-environment-jsdom": "^29.1.0",
     "prettier": "^2.8.4",
     "react-test-renderer": "^17.0.2",
     "standard": "^16.0.3",
