--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          lfs: true
+          submodules: true
+      - run: git lfs checkout
       - uses: actions/setup-java@v3
         with:
           java-version: '20'
